# bamboo_metadata

./: Cargo.toml
crates/podcast/: Cargo.toml
crates/podcast/src/: chapter.rs  episode.rs  show.rs
crates/util/: Cargo.toml
crates/util/src/: art.rs  id.rs  language.rs  lib.rs  person.rs  title.rs  uri.rs
src/: chapter.rs  episode.rs  id_provider.rs  language.rs  lib.rs  media.rs  path.rs  person.rs  series.rs  source.rs  thumbnail.rs  title.rs
