[workspace]
members = ["crates/*"]

[package]
name = "bamboo_metadata"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bamboo_metadata_util = { path = "crates/util" }
bamboo_metadata_podcast = { path = "crates/podcast" }
serde = "1"
chrono = "0.4"
