[package]
name = "bamboo_metadata_podcast"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
bamboo_metadata_util = { path = "../util/" }
chrono = "0.4.19"
isocountry = "0.3.2"
rss = "1.10.0"
serde = "1.0.127"
