[package]
name = "bamboo_metadata_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.6", features = ["serde", "v4"] }
chrono = { version = "0.4.0", features = ["serde"] }
iso639_enum = "0"
Inflector = "0.11"
http = "0.2.4"
